Update products and responsive fixed

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </section>
    
     <!--Type Section-->
-    <section class="type-section>
+    <section class="type-section">
         <div class="container">
             <div class="type-imgs-wrapper">
                 <div class="type-img-wrapper wow fadeInDown" data-wow-offset="250"  data-wow-iteration="1">
