--- a/product.html
+++ b/product.html
@@ -167,7 +167,7 @@
 
             <div class="product__detail--wrapper">
                 <div class="product__detail wow fadeInDown" data-wow-offset="250"  data-wow-iteration="1"">
-                    <div class="product__img">
+                    <div class="product__img product__img-hover-moveup">
                         <img src="./assets/img/y51.png" alt="y51">
                     </div>
                     <div class="product__name">
@@ -176,7 +176,7 @@
                     <button class="product__btn">Đặt mua</button>
                 </div>
                 <div class="product__detail wow fadeInDown" data-wow-offset="260"  data-wow-iteration="1"">
-                    <div class="product__img">
+                    <div class="product__img product__img-hover-moveup">
                         <img src="./assets/img/x50-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
@@ -185,7 +185,7 @@
                     <button class="product__btn">Đặt mua</button>
                 </div>
                 <div class="product__detail wow fadeInDown" data-wow-offset="270"  data-wow-iteration="1"">
-                    <div class="product__img">
+                    <div class="product__img product__img-hover-moveup">
                         <img src="./assets/img/y12s-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
@@ -194,7 +194,7 @@
                     <button class="product__btn">Đặt mua</button>
                 </div>
                 <div class="product__detail wow fadeInDown" data-wow-offset="280"  data-wow-iteration="1"">
-                    <div class="product__img">
+                    <div class="product__img product__img-hover-moveup">
                         <img src="./assets/img/y20-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
@@ -203,7 +203,7 @@
                     <button class="product__btn">Đặt mua</button>
                 </div>
                 <div class="product__detail wow fadeInDown" data-wow-offset="300"  data-wow-iteration="1"">
-                    <div class="product__img">
+                    <div class="product__img product__img-hover-moveup">
                         <img src="./assets/img/x50-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
@@ -212,7 +212,7 @@
                     <button class="product__btn">Đặt mua</button>
                 </div>
                 <div class="product__detail wow fadeInDown" data-wow-offset="300"  data-wow-iteration="1"">
-                    <div class="product__img">
+                    <div class="product__img product__img-hover-moveup">
                         <img src="./assets/img/y20-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
@@ -221,7 +221,7 @@
                     <button class="product__btn">Đặt mua</button>
                 </div>
                 <div class="product__detail wow fadeInDown" data-wow-offset="300"  data-wow-iteration="1"">
-                    <div class="product__img">
+                    <div class="product__img product__img-hover-moveup">
                         <img src="./assets/img/y51.png" alt="y51">
                     </div>
                     <div class="product__name">
@@ -230,7 +230,7 @@
                     <button class="product__btn">Đặt mua</button>
                 </div>
                 <div class="product__detail wow fadeInDown" data-wow-offset="300"  data-wow-iteration="1"">
-                    <div class="product__img">
+                    <div class="product__img product__img-hover-moveup">
                         <img src="./assets/img/x50-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
@@ -239,7 +239,7 @@
                     <button class="product__btn">Đặt mua</button>
                 </div>
                 <div class="product__detail wow fadeInDown" data-wow-offset="310"  data-wow-iteration="1"">
-                    <div class="product__img">
+                    <div class="product__img product__img-hover-moveup">
                         <img src="./assets/img/y12s-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
@@ -248,7 +248,7 @@
                     <button class="product__btn">Đặt mua</button>
                 </div>
                 <div class="product__detail wow fadeInDown" data-wow-offset="310"  data-wow-iteration="1"">
-                    <div class="product__img">
+                    <div class="product__img product__img-hover-moveup">
                         <img src="./assets/img/y51.png" alt="y51">
                     </div>
                     <div class="product__name">
@@ -257,7 +257,7 @@
                     <button class="product__btn">Đặt mua</button>
                 </div>
                 <div class="product__detail wow fadeInDown" data-wow-offset="310"  data-wow-iteration="1"">
-                    <div class="product__img">
+                    <div class="product__img product__img-hover-moveup">
                         <img src="./assets/img/x50-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
@@ -266,7 +266,7 @@
                     <button class="product__btn">Đặt mua</button>
                 </div>
                 <div class="product__detail wow fadeInDown" data-wow-offset="310"  data-wow-iteration="1"">
-                    <div class="product__img">
+                    <div class="product__img product__img-hover-moveup">
                         <img src="./assets/img/y12s-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
@@ -275,7 +275,7 @@
                     <button class="product__btn">Đặt mua</button>
                 </div>
                 <div class="product__detail wow fadeInDown" data-wow-offset="300"  data-wow-iteration="1"">
-                    <div class="product__img">
+                    <div class="product__img product__img-hover-moveup">
                         <img src="./assets/img/x50-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
@@ -284,7 +284,7 @@
                     <button class="product__btn">Đặt mua</button>
                 </div>
                 <div class="product__detail wow fadeInDown" data-wow-offset="310"  data-wow-iteration="1"">
-                    <div class="product__img">
+                    <div class="product__img product__img-hover-moveup">
                         <img src="./assets/img/y12s-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
@@ -293,7 +293,7 @@
                     <button class="product__btn">Đặt mua</button>
                 </div>
                 <div class="product__detail wow fadeInDown" data-wow-offset="310"  data-wow-iteration="1"">
-                    <div class="product__img">
+                    <div class="product__img product__img-hover-moveup">
                         <img src="./assets/img/y12s-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
@@ -302,7 +302,7 @@
                     <button class="product__btn">Đặt mua</button>
                 </div>
                 <div class="product__detail wow fadeInDown" data-wow-offset="300"  data-wow-iteration="1"">
-                    <div class="product__img">
+                    <div class="product__img product__img-hover-moveup">
                         <img src="./assets/img/y20-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
